--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0; }
+  margin: 0;
+  color: black; }
 
 main {
   width: 100%;
@@ -11,6 +12,11 @@ main {
     width: 100%;
     height: 200px;
     padding: 20px;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    outline: 0; }
+  main #wc-results-output {
+    margin-top: 40px;
+    padding-left: 20px;
+    border-left: 2px solid darkgray; }
 
 /*# sourceMappingURL=style.css.map */
