--- a/assets/scss/partials/_layout.scss
+++ b/assets/scss/partials/_layout.scss
@@ -1,5 +1,6 @@
 body {
-    margin: 0
+    margin: 0;
+    color: $primaryColor
 }
 
 main {
@@ -13,6 +14,13 @@ main {
         width: 100%;
         height: 200px;
         padding: $padding;
-        box-sizing: border-box
+        box-sizing: border-box;
+        outline: 0
+    }
+
+    #wc-results-output {
+        margin-top: 40px;
+        padding-left: 20px;
+        border-left: 2px solid $secondaryColor;
     }
 }
